# ihmc-alexander-sdk

./: .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ros2-build.yml
alexander-model-description/meshes/: ALX02-01-A02 Head Link.mtl
alexander-model-description/meshes/cycloidal_arm/: LeftGripperYawLink.mtl  LeftShoulderPitchLink.mtl  LeftShoulderRollLink.mtl  LeftWristYawLink.mtl  RightShoulderRollLink.mtl  RightShoulderRollLink_shortBicep.mtl  RightShoulderYawLink.mtl  RightWristRollLink.mtl
alexander-model-description/urdf/: alexander_v0.rightArm.urdf  alexander_v0.rightArmFixedForearm.urdf  alexander_v1.fullBody.urdf  alexander_v1.lowerBody.urdf  alexander_v1.lowerBodyOnly.urdf
alexander-models/alexander_V1_description/: alexander.xml
alexander-models/alexander_V1_description/hardware/: head.xml  left_arm.xml  left_leg.xml  pelvis.xml  right_arm.xml  (+2 more)
alexander-ros2-api/alexander_device_msgs/: CMakeLists.txt
alexander-ros2-api/alexander_msgs/: package.xml
alexander-ros2-api/alexander_msgs/msg/: AlexanderCommand.msg  ForceTorqueState.msg
alexander-ros2/alexander_msgs/: CMakeLists.txt
alexander_msgs/: CMakeLists.txt  package.xml
alexander_msgs/alexander_device_msgs/: package.xml
alexander_msgs/alexander_whole_body_msgs/: CMakeLists.txt  package.xml
alexander_msgs/msg/: AlexanderCommand.msg  DesiredAlexanderState.msg  DesiredOneDOFJointState.msg  EstimatedAlexanderState.msg  EstimatedOneDOFJointState.msg  ForceTorqueState.msg  HardwareResources.msg  IMUState.msg  OneDOFJointCommand.msg
(+109 files in other folders)
