<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>alexander_msgs</name>
  <version>0.0.1</version>
  <description>A package containing messages used to read and write data to IHMC's Alexander humanoid robot.</description>
  <maintainer email="rpeterson@ihmc.org">Reese Peterson</maintainer>
  <maintainer email="sfasano@ihmc.org">Stefan Fasano</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
